--- a/Calendar/Calendar/Views/ForgottPassword.xaml
+++ b/Calendar/Calendar/Views/ForgottPassword.xaml
@@ -5,12 +5,30 @@
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="Calendar.Views.ForgottPassword">
     <ContentPage.Content>
-        <StackLayout x:Name="friendStack">
-            <Label Text="Enter name or email" HorizontalOptions="Center" FontSize="Large" TextColor="Black"/>
-            <Entry Text="{Binding Name}" FontSize="Medium" />
-            <Button Command="{Binding navigationCommand}" HorizontalOptions="CenterAndExpand"  Text="Sign In" />
-            <Button Text="Next" Command="{Binding navigateCommand}"  HorizontalOptions="CenterAndExpand" />
-         
+        <StackLayout VerticalOptions="Center">
+            <Image HeightRequest="110" Source="lotos" />
+            <Entry
+                FontSize="Medium"
+                HorizontalOptions="Center"
+                Placeholder="Enter email"
+                Text="{Binding Email, Mode=TwoWay}" />
+            <Label x:Name="noEmail" 
+                   TextColor="Red"
+                   HorizontalOptions="Center"
+                   Text="{Binding NoEmail, Mode=OneWay}"/>
+            <StackLayout
+                Margin="15"
+                HorizontalOptions="CenterAndExpand"
+                Orientation="Horizontal">
+                <Button
+                    Command="{Binding navigationCommand}"
+                    HorizontalOptions="CenterAndExpand"
+                    Text="Sign In" />
+                <Button
+                    Command="{Binding navigateCommand}"
+                    HorizontalOptions="CenterAndExpand"
+                    Text="Next" />
+            </StackLayout>
         </StackLayout>
     </ContentPage.Content>
 
